objects/hic_signeasy__Sign_Audit_Trail__c.object
<CustomObject>
    <fields>
        <fullName>hic_signeasy__Action_Date__c</fullName>
        <label>Action Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__IP_Address__c</fullName>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Sign_Transaction__c</fullName>
        <label>Sign Transaction</label>
        <referenceTo>hic_signeasy__Transaction__c</referenceTo>
        <relationshipName>Audit_Trails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>hic_signeasy__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIEWED</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>ACCEPT</fullName>
                </value>
                <value>
                    <fullName>CREATE</fullName>
                </value>
                <value>
                    <fullName>IN PERSON</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                </value>
                <value>
                    <fullName>SENT</fullName>
                </value>
                <value>
                    <fullName>EDIT</fullName>
                </value>
                <value>
                    <fullName>REASSIGN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sign Audit Trail</label>
    <listViews>
        <fullName>hic_signeasy__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{000000}</displayFormat>
        <label>Audit Trail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sign Audit Trails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>